# project_python

./: .gitignore  README.md
pet_shop/: .env.example  main.py  pyproject.toml  requirements.txt
pet_shop/api/config/: __base_config.py  __init__.py  database.py  security.py
pet_shop/api/models/: __init__.py  orders.py  products.py  promotions.py  users.py
pet_shop/api/routes/: __init__.py  auth.py  orders.py  products.py  promotions.py  users.py
pet_shop/api/services/: __init__.py  auth.py  orders.py  products.py  promotions.py
pet_shop/scripts/: seed_database.py
pet_shop/static/: styles.css
