[tool.poetry]
name = "pet-shop"
version = "0.1.0"
description = ""
authors = ["Luna Lopez <lunalopez0125@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pymongo = {extras = ["srv"], version = "^4.10.1"}
pydantic-mongo = "^2.3.0"
fastapi-jwt = {extras = ["authlib"], version = "^0.3.0"}
passlib = {extras = ["brcypt"], version = "^1.7.4"}
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
